--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/firebase": "^4.1.0",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/toast": "^3.3.0",
     "firebase": "^7.10.0",
     "nuxt": "^2.0.0",
-    "vue-cookie": "^1.1.4"
+    "vue-cookie": "^1.1.4",
+    "vue-swal": "^1.0.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^1.0.0",
